# pu_aiml_labs

./: .gitignore  LICENSE  README.md
semester_1/5005.ai/: .gitignore  exp_3.ipynb  exp_4_bfs.py  exp_5_astar.ipynb  tsp.py
semester_1/5005.ai/doc/: a_star.pptx  ao_star.pptx
semester_1/5005.ai/nb/: exp_2.ipynb  exp_4_bfs.ipynb  exp_4_dfs.ipynb  exp_5_aostar.ipynb  exp_5_astar.ipynb  exp_6.ipynb  exp_7_hill_climbing.ipynb  pygame.ipynb  water_jug.ipynb
semester_1/5005.ai/recx/: Customer Recommendation System.pptx  FAQ.md  index.html  package.json  vite.config.js
semester_1/5005.ai/scripts/: exp_01_basics.py  exp_02_ds_excepts.py  exp_04_bfs.rb  (+11 more)
semester_1/5007.mla/: exp_1.ipynb  exp_1_level_1.ipynb  exp_1_level_2.ipynb  exp_2.ipynb  exp_3.ipynb  exp_4_1.ipynb  exp_4_2.ipynb  exp_5_s3vm.ipynb  exp_5_svm.ipynb  exp_6_ica.ipynb  exp_6_pca.ipynb  mat.svd.ipynb  tools_tut.ipynb  tsvm.py
semester_2/dl/: cnn.ipynb  cnn_cifar10.ipynb  cnn_mnist.ipynb  cnn_torch.ipynb  tf.ipynb
semester_2/nlp/: .mise.toml  pyproject.toml
semester_2/nlp/.uv/: config.toml
semester_2/nlp/keep_data/: sentiment_output.csv
semester_2/nlp/learn/: README.md  _nltk.py  setup.py
semester_2/nlp/mdata/: sentiment_input.csv
semester_2/nlp/nb/: bert.ipynb  chat_transformer.ipynb  exp_1_file_handling.ipynb  exp_similarity.ipynb  translation.ipynb  w2v_twitter.ipynb
semester_2/nlp/scripts/: corpuscleaning.py  file_handling_and_basic_nltk_and_spacy.py  language_identification.py  word_vectors_demo.py
semester_2/nlp/scripts/mine/: corpuscleaning.py  lang.py  sentiment.py  word_vecs.py
(+15 files in other folders)
