[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
	"ipykernel",
	"nltk",
	"numpy",
	"pandas",
	"scikit-learn",
	"scipy",
	"spacy",
	"torch",
	"transformers",
	"matplotlib",
	"langdetect",
	"gensim",
	"textblob",
	"seqeval",
]
